# oxide-beta

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/oxide-torch/: Cargo.toml
crates/oxide-torch-cuda/: Cargo.toml
crates/oxide-torch-cuda/src/: cublas.rs  cuda_graph.rs  cudnn.rs  error.rs  kernel_module.rs  lib.rs
crates/oxide-torch-models/: Cargo.toml
crates/oxide-torch-models/examples/: bert_finetune.rs  bert_inference.rs  gemma4_generate.rs  gemma4_load.rs  gemma4_stream.rs  mnist_inference.rs  mnist_training.rs  mobilenet_v4.rs
crates/oxide-torch-models/examples/bert_support/: mod.rs
crates/oxide-torch-models/src/: lib.rs
crates/oxide-torch-models/src/gemma4_cuda/: attention.rs  cache.rs  decode.rs  mod.rs  ple.rs  smoke.rs  tensor_ops.rs
crates/oxide-torch-models/src/models/: gemma4.rs  mobilenet_v4.rs  mod.rs
crates/oxide-torch-models/src/models/bert/: config.rs  graph.rs  input.rs  math.rs  mod.rs  model.rs  tests.rs  tokenizer.rs
crates/oxide-torch-models/src/models/gemma4/: cache.rs  config.rs  generation.rs  mod.rs  model.rs  sampling.rs  tokenizer.rs
crates/oxide-torch/examples/: mlp.rs
crates/oxide-torch/src/: error.rs  jit.rs  lib.rs  loss.rs  main.rs  nn.rs  optim.rs  safetensors.rs  tensor.rs  transformer.rs
crates/oxide-torch/src/cuda/: jit.rs  mod.rs  runtime.rs
crates/oxide-torch/src/data/: mod.rs
crates/oxide-torch/src/tensor/: autograd.rs  evaluation.rs  graph.rs  mod.rs  operators.rs  shape.rs
examples/: gemma4_load.rs  mlp.rs  mnist_inference.rs  mnist_training.rs  mobilenet_v4.rs  safetensors_inspect.rs
scripts/: infer_mnist.sh  profile_cuda.sh  reference_gemma4.py  train_mnist.sh
src/: cublas.rs  cuda.rs  cuda_graph.rs  error.rs  gemma4_cuda.rs  jit.rs  lib.rs  loss.rs  nn.rs  optim.rs  safetensors.rs  tensor.rs
src/cuda/: jit.rs  kernel_module.rs  mod.rs  runtime.rs
src/data/: mnist.rs  mod.rs
src/gemma4_cuda/: attention.rs  cache.rs  decode.rs  mod.rs  ple.rs  tensor_ops.rs
src/models/: gemma4.rs  mobilenet_v4.rs  mod.rs
