[package]
name = "oxide-torch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny Torch-like lazy tensor library powered by NVLabs cuda-oxide"
license = "Apache-2.0"

[workspace]

[features]
default = []
cuda = ["dep:cuda-core", "dep:cuda-device", "dep:cuda-host"]
cudnn = ["cuda", "dep:libloading"]

[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6a92f548f25899352e47e173bfd387b2cd0d1e18", optional = true }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6a92f548f25899352e47e173bfd387b2cd0d1e18", optional = true }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6a92f548f25899352e47e173bfd387b2cd0d1e18", optional = true }
libloading = { version = "0.8", optional = true }
half = "2.6"
safetensors = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[[example]]
name = "mlp"
required-features = []

[[bin]]
name = "mnist-training"
path = "src/bin/mnist_training.rs"
required-features = []

[[bin]]
name = "mnist-inference"
path = "src/bin/mnist_inference.rs"
required-features = []
