[package]
name = "oxide-torch-cuda"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CUDA backend primitives for oxide-torch"
license = "Apache-2.0"

[features]
default = []
cuda = ["dep:cuda-core", "dep:cuda-device", "dep:cuda-host", "dep:libloading"]

[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2b1269964beaeab789a1512d0089fe42d9336e14", optional = true }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2b1269964beaeab789a1512d0089fe42d9336e14", optional = true }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2b1269964beaeab789a1512d0089fe42d9336e14", optional = true }
libloading = { version = "0.8", optional = true }
thiserror = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
