[package]
name = "oxide-torch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny Torch-like lazy tensor library powered by NVLabs cuda-oxide"
license = "Apache-2.0"

[features]
default = []
cuda = ["dep:cuda-core", "dep:oxide-torch-cuda"]
cudnn = ["cuda"]

[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "2b1269964beaeab789a1512d0089fe42d9336e14", optional = true }
oxide-torch-cuda = { path = "../oxide-torch-cuda", features = ["cuda"], optional = true }
half = "2.6"
memmap2 = "0.9"
safetensors = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[[example]]
name = "mlp"
required-features = []
